--- a/pages/product.html
+++ b/pages/product.html
@@ -1402,7 +1402,7 @@
                 <div class="video-wrapper">
                     <!-- Replace VIDEO_ID with your actual YouTube video ID -->
                     <iframe 
-                        src="https://www.youtube.com/embed/VIDEO_ID" 
+                        src="https://youtu.be/Diz6tyVsSK8" 
                         title="Craftsman Cabinet Creator Tutorial"
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
