--- a/pages/product.html
+++ b/pages/product.html
@@ -1701,9 +1701,15 @@
                 </div>
 
                 <div class="roadmap-card">
+                    <div class="roadmap-icon">💬</div>
+                    <h3 class="roadmap-title">Counter-top designs</h3>
+                    <p class="roadmap-desc">Adding counter-top to your cabinets and control its dimensions and other properties procedurely.</p>
+                </div>
+
+                <div class="roadmap-card">
                     <div class="roadmap-icon">🔘</div>
-                    <h3 class="roadmap-title">Pulls & Handles</h3>
-                    <p class="roadmap-desc">Creative hardware designs including knobs, bar pulls, cup pulls, and decorative handles.</p>
+                    <h3 class="roadmap-title">Pulls & Handles placeholders and controls</h3>
+                    <p class="roadmap-desc">Ability to apply your custom designed pulls & handles on cabinet doors and drawer fronts with controllers for position, rotation, and scale </p>
                 </div>
 
                 <div class="roadmap-card">
