--- a/pages/product.html
+++ b/pages/product.html
@@ -1701,7 +1701,7 @@
                 </div>
 
                 <div class="roadmap-card">
-                    <div class="roadmap-icon">💬</div>
+                    <div class="roadmap-icon">🪵</div>
                     <h3 class="roadmap-title">Counter-top designs</h3>
                     <p class="roadmap-desc">Adding counter-top to your cabinets and control its dimensions and other properties procedurely.</p>
                 </div>
