--- a/pages/product.html
+++ b/pages/product.html
@@ -122,7 +122,7 @@
 
         /* Hero Section */
         .hero {
-            min-height: 100vh;
+            /*min-height: 100vh;*/
             display: flex;
             align-items: center;
             padding: 120px 2rem 80px;
@@ -133,10 +133,10 @@
         .hero::before {
             content: '';
             position: absolute;
-           /* top: -50%;*/
+            top: -50%;
             right: -20%;
             width: 80%;
-            /*height: 150%;*/
+            height: 150%;
             background: radial-gradient(ellipse, var(--primary-glow) 0%, transparent 70%);
             opacity: 0.5;
             pointer-events: none;
